# slowauth

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/slowauth/: __init__.py  server.py
tests/: test_random.py
